--- a/src/app/components/informes/informe-precio/informe-precio.component.html
+++ b/src/app/components/informes/informe-precio/informe-precio.component.html
@@ -2,14 +2,14 @@
   <div class="chart-container">
     <div class="titulo-chart">
       <h2>Precio promedio marcas</h2>
-      <select class="form-control col-md-2" (change)="seleccion = $event.target.value">
-        <option *ngFor="let val of yearMonth" (value)="val" >
-          {{val}}
+      <select class="form-control col-md-2" [(ngModel)]="seleccion" (change)="mes()">
+        <option *ngFor="let seleccion of yearMonth" (value)="seleccion" >
+          {{seleccion}}
         </option>
       </select>
     </div>
     <div class="chart-line">
-      <canvas id="myChart" width="200px" height="120px" #mychart></canvas>
+      <canvas id="myChart" width="200px" height="120px" ></canvas>  <!-- #mychart -->
     </div>
   </div>
 
