--- a/src/app/components/informes/informes.component.html
+++ b/src/app/components/informes/informes.component.html
@@ -71,6 +71,14 @@
   </div>
   <!-- /#sidebar-wrapper -->
 
+  <div class="contenedor-labels">
+    <div class="button-sidebar">
+        <button class="btn btn-primary btn-sidebar" id="menu-toggle">
+            <span class="material-icons">compare_arrows</span>
+        </button>
+    </div>
+  </div>
+
   <!-- Page Content -->
   <div class="container-cards mt-3">
     <div class="grid">
