Se cambian el color de los iconos Cards y brackgrounds

--- a/src/app/components/informes/informe-precio/informe-precio.component.css
+++ b/src/app/components/informes/informe-precio/informe-precio.component.css
@@ -43,7 +43,7 @@ tr:nth-child(even) {
 }
 
 tr:hover td {
-  background-color: rgba(230, 97, 57, 0.987);
+  background-color:#c4e3eb ;
   color: white;
 }
 
