--- a/src/app/components/informes/informes.component.html
+++ b/src/app/components/informes/informes.component.html
@@ -1,23 +1,13 @@
 <div class="d-flex" id="wrapper">
   <!-- Sidebar -->
-  <div class="border-right" id="sidebar-wrapper">
+  <div id="sidebar-wrapper">
     <div class="menu-container">
       <div class="list-group">
         <ul class="list-unstyled components mb-5">
           <li class="active">
-            <a
-              href="#homeSubmenu"
-              data-toggle="collapse"
-              aria-expanded="false"
-              class="sel1"
-              ><img
-                src="./assets/rect.png"
-                alt=""
-                class="imgsel" />Comparativos<img
-                src="./assets/tri.png"
-                alt=""
-                class="imgsel2"
-            /></a>
+            <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="sel1">
+              <img src="./assets/rect.png" alt="" class="imgsel material-icons" />Comparativos<img src="./assets/tri.png" alt="" class="imgsel2"/>
+            </a>
             <ul class="collapse list-unstyled firstitem" id="homeSubmenu">
               <li class="list-items-container">
                 <a class="sel2" routerLink="informePrecios" routerLinkActive="activo" >Precio promedio</a>
@@ -73,8 +63,8 @@
 
   <div class="contenedor-labels">
     <div class="button-sidebar">
-        <button class="btn btn-primary btn-sidebar" id="menu-toggle">
-            <span class="material-icons">compare_arrows</span>
+        <button class="btn-sidebar" id="menu-toggle">
+          <span class="material-icons">navigate_before</span>
         </button>
     </div>
   </div>
@@ -109,7 +99,7 @@
           version="1.0"
           viewBox="0.0 0.0 180.0 210.0"
           zoomAndPan="magnify"
-          style="fill: rgb(255, 87, 87)"
+          style="fill:#358da3 "
           role="img"
           aria-label="Illustration of a Funnel"
         >
@@ -171,7 +161,7 @@
         </div>
         <div class="column" >
           <div class="card" routerLink="informeSKU" routerLinkActive="activo">
-            <img src="../../../assets/sku.svg" class="Capa_1" alt="sku" />
+            <img src="../../../assets/sku.png" class="Capa_1" alt="sku" />
             <p class="">Total SKU</p>
             <p>{{totalsku}}</p>
             <p class="porcentaje">+ 0,39%</p>
