--- a/src/app/components/informes/informe-descuento/informe-descuento.component.html
+++ b/src/app/components/informes/informe-descuento/informe-descuento.component.html
@@ -4,7 +4,7 @@
   <div class="titulo-chart">
     <h2>Descuento promedio marcas</h2>
     <select class="form-control col-md-2" [(ngModel)]="seleccion" (change)="mes()">
-      <option *ngFor="let seleccion of yearMonth" (value)="mes" >
+      <option *ngFor="let seleccion of yearMonth" (value)="seleccion" >
         {{seleccion}}
       </option>
     </select>
