Se implementan las tablas con información de la DB

--- a/src/app/components/informes/informe-categoria/informe-categoria.component.css
+++ b/src/app/components/informes/informe-categoria/informe-categoria.component.css
@@ -1,19 +1,13 @@
 /* Tablas */
 .table-container {
     width: 100%;
-    max-width: 700px;
-    margin: auto;
-  }
-  
-  .table-container-sku {
-    width: 100%;
-    max-width: 1600px;
+    max-width: auto;
     margin: auto;
   }
   
   .table-container-tipoP {
     width: 100%;
-    max-width: 1600px;
+    max-width: auto;
     margin: auto;
   }
   
@@ -41,8 +35,8 @@
     background-color: #ddd;
   }
   
-  tr:hover td{
-    background-color: rgba(230, 97, 57, 0.987);
+  tr:hover td {
+    background-color:#358da3;
     color: white;
   }
   
