--- a/src/app/components/informes/informe-sku/informe-sku.component.css
+++ b/src/app/components/informes/informe-sku/informe-sku.component.css
@@ -7,48 +7,18 @@
 /* Tablas */
 .table-container {
     width: 100%;
-    max-width: 700px;
+    max-width: auto;
     margin: auto;
   }
   
   .table-container-sku {
     width: 100%;
-    max-width: 1600px;
+    max-width: auto;
     margin: auto;
   }
-  
-  .table-container-tipoP {
-    width: 100%;
-    max-width: 1600px;
-    margin: auto;
-  }
-  
-  table {
-    width: 100%;
-    background-color: white;
-    border-collapse: collapse;
-    text-align: left;
-    margin: 0;
-    padding: 0;
-    table-layout: fixed;
-  }
-  
-  th, td{
-    padding: 7px;
-  }
-  
-  thead{
-    background-color: #cecece;
-    border-bottom: solid 1px #919090;
-    color: #000000;
-  }
-  
-  tr:nth-child(even){
-    background-color: #ddd;
-  }
-  
-  tr:hover td{
-    background-color: rgba(230, 97, 57, 0.987);
+
+  tr:hover td {
+    background-color:#358da3;
     color: white;
   }
   
